[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
itertools = "0.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
